testdata/reject/later/accumulate03.lc
main = let
  emptyFB           = FrameBuffer (colorImage1 (V4 0.0 0.0 0.4 1.0),colorImage1 0.1)
  rasterCtx         = TriangleCtx CullNone PolygonFill NoOffset LastVertex
  colorOp           = ColorOp NoBlending (V4 True True True True)
  fragmentCtx       = AccumulationContext (colorOp,ColorOp NoBlending True)
  vertexShader v    = VertexOut v 1.0 () (Smooth v)
  vertexStream      = fetch "stream" Triangle (Attribute "position" :: Vec 4 Float)
  primitiveStream   = Transform vertexShader vertexStream
  fragmentStream    = Rasterize rasterCtx primitiveStream
  fragmentShader v  = FragmentOut 1.0
  frame             = accumulate fragmentCtx PassAll fragmentShader fragmentStream emptyFB
 in ScreenOut frame
